--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,582 +6,14 @@
 @import "layout/navigation";
 @import "layout/footer";
 
-
-
-
-
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
-.container {
-    animation-name: container;
-    animation-duration: 3s;
-}
-
-@keyframes container {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-.loading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: hideLoading 2s forwards;
-    position: absolute;
-    right: 0;
-    bottom: 20px;
-    left: 35px;
-
-}
-
-@keyframes hideLoading {
-    0% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
-}
-
-.navigation {
-    width: 100%;
-
-    &-link {
-        padding: 20px 0;
-        width: 100%;
-        display: block;
-        text-align: center;
-    }
-
-    img {
-        // width: 200px;
-        align-items: center;
-    }
-
-}
-
-// .search-btn-wrap {
-//     padding: 30px;
-//     background-color: $third-color;
-// }
-
-.search-btn-wrap {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #9356DC;
-    padding: 35px 0;
-    box-shadow: rgb(11 10 10 / 18%) 0px 13px 12px 0px inset;
-
-    input {
-        border: none;
-        background-color: $primary-color;
-
-        &::placeholder {
-            color: #000;
-        }
-
-        font: {
-            size: 25px;
-            family: $text-font
-        }
-
-    }
-
-}
-
-.fa-map-marker-alt {
-    font-size: 22px;
-    margin: 15px 15px 15px 130px;
-}
-
-
-
-.head {
-    background-color: $third-color;
-    text-align: center;
-    padding: 35px 0 60px 0;
-
-    h1 {
-        font: {
-            family: $text-font;
-            size: 30px;
-            weight: 700
-        }
-
-    }
-
-    p {
-        padding: 25px 10px;
-        text-align: center;
-        color: gray;
-
-        font: {
-            family: $text-font;
-            size: 22px;
-        }
-    }
-
-    button {
-        background-color: $secondary-color;
-        padding: 25px 40px;
-        color: white;
-        border-radius: 50px;
-        font-size: 18px;
-        font-weight: 500;
-        border: none;
-        align-items: center;
-        box-shadow: 1px 7px 10px 1px rgb(0 0 0 / 15%);
-
-        &:hover {
-            box-shadow: -6px 20px 10px 1px rgb(0 0 0 / 15%);
-            transition-duration: 1s;
-            background-color: lighten($secondary-color, 10);
-        }
-    }
-}
-
-// MAIN SECTION
-
-/* Section with the buttons for chosing the place 
-    and prepare the menu*/
-
-.btns {
-    padding: 40px 10px 50px 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    h2 {
-        font: {
-            family: $text-font;
-            size: 40px;
-            weight: 700;
-        }
-    }
-}
-
-.btn-wrap {
-    width: 35%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: baseline;
-    background-color: $third-color;
-    border-radius: 23px;
-    margin: 25px 0 10px 10px;
-    box-shadow: -2px 6px 11px 2px rgb(0 0 0 / 15%);
-    font-size: 25px;
-
-    &:hover {
-        box-shadow: -6px 20px 10px 1px rgb(0 0 0 / 15%);
-        transition-duration: 1s;
-        background-color: lighten($third-color, 10);
-    }
-
-    span {
-        font-size: 20px;
-        border: 5px solid #9356DC;
-        color: white;
-        border-radius: 35px;
-        padding: 0 5px;
-        background-color: #9356DC;
-        margin: 0 10px 0 -10px;
-    }
-
-    .fas {
-        font-size: 27px;
-        padding: 20px 0 20px 10px;
-    }
-
-    .fa-mobile-alt {
-        color: gray;
-    }
-
-    .fa-list {
-        color: gray;
-    }
-
-    .fa-store {
-        color: $primary-color;
-    }
-
-    p {
-        padding: 25px 0 25px 25px;
-
-        font: {
-            size: 22px;
-            weight: 700;
-            family: $text-font;
-        }
-    }
-}
-
-// Section of the restaurants 
-
-.rsts-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: #99E2D0;
-    padding: 15px 0 50px 0;
-    align-items: stretch;
-    flex-wrap: wrap;
-
-    h3 {
-        padding: 0px 1240px 10px 0px;
-
-        font: {
-            size: 25px;
-            family: $text-font;
-            weight: 700;
-        }
-
-    }
-
-
-}
-
-.rst-ad {
-    background-color: #fff;
-    border-radius: 18px;
-    /* margin: 20px; */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-    a {
-        text-decoration: none;
-
-    }
-
-    span {
-        color: darkcyan;
-        background-color: #99E2D0;
-        font-size: 17px;
-        padding: 6px 30px;
-        font-family: Roboto;
-        font-weight: 700;
-        margin: 15px 0 0 -106px;
-        position: absolute;
-    }
-
-    img {
-        width: 320px;
-        border-radius: 18px 18px 0 0;
-    }
-}
-
-
-
-.ad-info {
-    position: relative;
-    // width: 100%;
-    margin: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.info {
-
-    h4 {
-        color: #000;
-        text-decoration: none;
-        padding: 2px 0;
-
-        font: {
-            family: $text-font;
-            size: 20px;
-            weight: 800;
-
-        }
-    }
-
-    p {
-        font: {
-            family: $text-font;
-            size: 20px;
-            weight: 400;
-        }
-
-        color:grey;
-    }
-
-}
-
-.main-heart1 {
-    font-size: 30px;
-    color: gray;
-    position: absolute;
-    left: 250px;
-    //  margin: 255px 410px; 
-    opacity: 1;
-}
-
-.main-heart2 {
-    width: auto;
-    font-size: 30px;
-    position: absolute;
-    left: 250px;
-    opacity: 0;
-    // margin: 255px 410px;
-
-    &:hover {
-        opacity: 1;
-        transition-duration: 1s;
-        color: lighten($primary-color, 5);
-    }
-
-}
-
-// FOOTER
-
-footer {
-    @include main-footer;
-}
-
-
-// DESCTOP VERSION
-
-// THE FULL PALETTE RESTAURANT'S SITE
-
-// NAVIGATION
-
-// .rstnt-navigation {
-//     @include restorant-navigation;
-// }
-
-.rstnt-navigation {
-    display: flex;
-    flex-direction: row;
-    padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
-    align-items: center;
-    justify-content: flex-start;
-
-    a {
-        text-decoration: none;
-    }
-
-    i {
-        font-size: 20px;
-        color: gray;
-        margin: 0 25px;
-    }
-
-    img {
-        width: 170px;
-        padding: 0 60px;
-    }
-}
-
-
-.nav-img {
-    width: 100%;
-}
-
-// THE FULL PALETTE RESTAURANT'S MAIN SECTION 
-
-.menu {
-    @include menu-about-pages;
-}
-
-.line {
-    @include line;
-}
-
-.menu-title {
-    @include menu-title;
-}
-
-.heart {
-    @include heart;
-}
-
-// .menu-section {}
-
-.dish {
-    @include dish;
-}
-
-.dish-info {
-    @include dish-title;
-
-}
-
-.visible-dish-wrap {
-    // outline: 1px solid yellow;
-    // position: relative;
-    width: 95%;
-    background-color: #fff;
-    border-radius: 20px;
-    margin: 15px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
-
-    &:hover {
-        width: 95%;
-        cursor: pointer;
-        transform: rotate(360deg);
-
-        .dish-wrap {
-            width: 100%;
-        }
-
-        .dish-info {
-            width: 85%;
-
-            >p {
-                width: 70%;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-            }
-
-            >h3 {
-                width: 70%;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-            }
-        }
-    }
-
-    // display: flex;
-
-}
-
-// @keyframes mymove {
-//     from {
-//         right: 0px;
-//     }
-
-//     to {
-//         left: 10px
-//     }
-// }
-
-.dish-wrap {
-    // outline: 1px solid red;
-    // position: relative;
-    width: 124%;
-    display: flex;
-    margin-left: 10px;
-
-    // align-items: center;
-    // justify-content: space-between;
-    // transition: width 1s ease-out 100ms;
-    // &:hover {
-    //     width: 60%;
-    //     .dish-info {
-
-    //         >p {
-    //             width:90%;
-    //             overflow: hidden;
-    //             white-space: nowrap;
-    //             text-overflow: ellipsis;
-    //         }
-    // }
-    &:hover {
-        >.check {
-            .fa-check-circle {
-                font-size: 35px;
-                color: #fff;
-                background-color: $third-color;
-                border-radius: 50%;
-                border: 1px solid $third-color;
-                transition: transform 1s ease-out 10ms;
-            }
-        }
-
-        >.check {
-            .fa-check-circle {
-                transform: rotate(360deg);
-            }
-        }
-    }
-}
-
-
-
-
-// &:hover {
-//     width: fit-content;
-//     cursor: pointer;
-//     transform: rotate(360deg);
-// }
-
-.dish-info {
-    //     // outline: 1px solid blue;
-    width: 95%;
-    /* padding-left: 15px; */
-    // margin-left: 15px;
-    // overflow: hidden;
-    // white-space: nowrap;
-
-    // >p {
-    //     // width:100%;
-    //     overflow: hidden;
-    //     white-space: nowrap;
-    //     text-overflow: ellipsis;
-    // }
-
-    // &:hover {
-    //     width: 60%;
-    //     >p {
-    //         // width:100%;
-    //         overflow: hidden;
-    //         white-space: nowrap;
-    //         text-overflow: ellipsis;
-    // }
-}
-
-.dish-price {
-    padding-right: 15px;
-}
-
-.check {
-    background-color: #99E2D0;
-    border-radius: 0 20px 20px 0;
-    width: 100px;
-    height: 95px;
-    // margin: 0 0 0 -30px;
-    // position: absolute;
-    // right: 0px;
-    // bottom: 0px;
-    // z-index: -1;
-}
-
-.fa-check-circle {
-    font-size: 35px;
-    color: #fff;
-    background-color: $third-color;
-    border-radius: 50;
-    transition: transform 1s;
-    margin: 28px 32px;
-    // position: absolute;
-}
-
-.order {
-    @include btn-order;
-}
-
-footer {
-    @include footer;
-}
+@import "pages/desktop-homepage";
+@import "pages/desktop-palette";
+@import "pages/desktop-enchanted";
+@import "pages/desktop-gourmand";
+@import "pages/desktop-bastille";
+@import "pages/phone-homepage";
+@import "pages/phone-palette";
+@import "pages/phone-enchanted";
+@import "pages/phone-gourmand";
+@import "pages/phone-bastille";
+@import "pages/contact";
