--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,555 @@
-/* Error: Undefined mixin.
- *   ,
- * 2 |     @include f
- *   |     ^^^^^^^^^^
- *   '
- *   sass\layout\_footer.scss 2:5  footer()
- *   sass\main.scss 586:5          root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined mixin.\a   \2577 \a 2 \2502      @include f\a   \2502      ^^^^^^^^^^\a   \2575 \a   sass\\layout\\_footer.scss 2:5  footer()\a   sass\\main.scss 586:5          root stylesheet";
+@keyframes menu-animation {
+  from {
+    bottom: -50px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0px;
+    opacity: 1;
+  }
 }
+@keyframes container {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes hideLoading {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+body {
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  animation-name: container;
+  animation-duration: 3s;
+}
+
+@keyframes container {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: hideLoading 2s forwards;
+  position: absolute;
+  right: 0;
+  bottom: 20px;
+  left: 35px;
+}
+
+@keyframes hideLoading {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.navigation {
+  width: 100%;
+}
+.navigation-link {
+  padding: 20px 0;
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+.navigation img {
+  align-items: center;
+}
+
+.search-btn-wrap {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #9356DC;
+  padding: 35px 0;
+  box-shadow: rgba(11, 10, 10, 0.18) 0px 13px 12px 0px inset;
+}
+.search-btn-wrap input {
+  border: none;
+  background-color: #9356DC;
+  font-size: 25px;
+  font-family: Roboto;
+}
+.search-btn-wrap input::placeholder {
+  color: #000;
+}
+
+.fa-map-marker-alt {
+  font-size: 22px;
+  margin: 15px 15px 15px 130px;
+}
+
+.head {
+  background-color: #99E2D0;
+  text-align: center;
+  padding: 35px 0 60px 0;
+}
+.head h1 {
+  font-family: Roboto;
+  font-size: 30px;
+  font-weight: 700;
+}
+.head p {
+  padding: 25px 10px;
+  text-align: center;
+  color: gray;
+  font-family: Roboto;
+  font-size: 22px;
+}
+.head button {
+  background-color: #FF79DA;
+  padding: 25px 40px;
+  color: white;
+  border-radius: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  border: none;
+  align-items: center;
+  box-shadow: 1px 7px 10px 1px rgba(0, 0, 0, 0.15);
+}
+.head button:hover {
+  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+  transition-duration: 1s;
+  background-color: #fface8;
+}
+
+/* Section with the buttons for chosing the place 
+    and prepare the menu*/
+.btns {
+  padding: 40px 10px 50px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btns h2 {
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.btn-wrap {
+  width: 35%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: baseline;
+  background-color: #99E2D0;
+  border-radius: 23px;
+  margin: 25px 0 10px 10px;
+  box-shadow: -2px 6px 11px 2px rgba(0, 0, 0, 0.15);
+  font-size: 25px;
+}
+.btn-wrap:hover {
+  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+  transition-duration: 1s;
+  background-color: #c1ede2;
+}
+.btn-wrap span {
+  font-size: 20px;
+  border: 5px solid #9356DC;
+  color: white;
+  border-radius: 35px;
+  padding: 0 5px;
+  background-color: #9356DC;
+  margin: 0 10px 0 -10px;
+}
+.btn-wrap .fas {
+  font-size: 27px;
+  padding: 20px 0 20px 10px;
+}
+.btn-wrap .fa-mobile-alt {
+  color: gray;
+}
+.btn-wrap .fa-list {
+  color: gray;
+}
+.btn-wrap .fa-store {
+  color: #9356DC;
+}
+.btn-wrap p {
+  padding: 25px 0 25px 25px;
+  font-size: 22px;
+  font-weight: 700;
+  font-family: Roboto;
+}
+
+.rsts-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #99E2D0;
+  padding: 15px 0 50px 0;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+.rsts-section h3 {
+  padding: 0px 1240px 10px 0px;
+  font-size: 25px;
+  font-family: Roboto;
+  font-weight: 700;
+}
+
+.rst-ad {
+  background-color: #fff;
+  border-radius: 18px;
+  /* margin: 20px; */
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+.rst-ad a {
+  text-decoration: none;
+}
+.rst-ad span {
+  color: darkcyan;
+  background-color: #99E2D0;
+  font-size: 17px;
+  padding: 6px 30px;
+  font-family: Roboto;
+  font-weight: 700;
+  margin: 15px 0 0 -106px;
+  position: absolute;
+}
+.rst-ad img {
+  width: 320px;
+  border-radius: 18px 18px 0 0;
+}
+
+.ad-info {
+  position: relative;
+  margin: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info h4 {
+  color: #000;
+  text-decoration: none;
+  padding: 2px 0;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 800;
+}
+.info p {
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  color: grey;
+}
+
+.main-heart1 {
+  font-size: 30px;
+  color: gray;
+  position: absolute;
+  left: 250px;
+  opacity: 1;
+}
+
+.main-heart2 {
+  width: auto;
+  font-size: 30px;
+  position: absolute;
+  left: 250px;
+  opacity: 0;
+}
+.main-heart2:hover {
+  opacity: 1;
+  transition-duration: 1s;
+  color: #a16be0;
+}
+
+footer {
+  background-color: #000;
+  padding: 0 0 45px 0;
+}
+footer h5 {
+  color: #fff;
+  font-family: Shrikhand;
+  font-size: 35px;
+  font-weight: 400;
+  padding: 45px 0 0 40px;
+}
+footer .contacts {
+  width: 100%;
+  text-decoration: none;
+  font-family: Roboto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+footer .contacts a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+footer .fa-hands-helping {
+  transform: rotate(-3deg);
+  font-size: 18px;
+  padding: 15px 10px;
+}
+footer .fa-utensils {
+  padding-right: 13px;
+  font-size: 20px;
+}
+
+.rstnt-navigation {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 0 15px 0;
+  /* margin: 20px 0 0 0; */
+  align-items: center;
+  justify-content: flex-start;
+}
+.rstnt-navigation a {
+  text-decoration: none;
+}
+.rstnt-navigation i {
+  font-size: 20px;
+  color: gray;
+  margin: 0 25px;
+}
+.rstnt-navigation img {
+  width: 170px;
+  padding: 0 60px;
+}
+
+.nav-img {
+  width: 100%;
+}
+
+.menu {
+  position: relative;
+  margin-top: -60px;
+  background-color: #fafafa;
+  border-radius: 65px 65px 0 0;
+}
+.menu h2 {
+  padding: 30px 0 7px 25px;
+  color: gray;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.line {
+  border-bottom: 3px solid #99E2D0;
+  width: 7%;
+  margin: 0 0 25px 27px;
+}
+
+.menu-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 40px 10px 25px;
+}
+.menu-title h1 {
+  width: 70%;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: Shrikhand;
+}
+
+.heart {
+  color: gray;
+  font-size: 25px;
+  font-weight: 100;
+}
+
+.dish {
+  width: 79%;
+  display: flex;
+  align-items: flex-end;
+  margin: 0 0 17px 0;
+}
+.dish span {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.dish-info {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 125%;
+  margin-right: 10px;
+}
+.dish-info h3 {
+  width: 70%;
+  overflow: visible;
+  white-space: pre-line;
+  text-overflow: ellipsis;
+  padding-bottom: 5px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 600;
+}
+.dish-info p {
+  color: gray;
+  font-family: Roboto;
+  font-size: 17px;
+}
+.dish-info p:hover {
+  width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.visible-dish-wrap {
+  width: 95%;
+  background-color: #fff;
+  border-radius: 20px;
+  margin: 15px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
+}
+.visible-dish-wrap:hover {
+  width: 95%;
+  cursor: pointer;
+  transform: rotate(360deg);
+}
+.visible-dish-wrap:hover .dish-wrap {
+  width: 100%;
+}
+.visible-dish-wrap:hover .dish-info {
+  width: 85%;
+}
+.visible-dish-wrap:hover .dish-info > p {
+  width: 70%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.visible-dish-wrap:hover .dish-info > h3 {
+  width: 70%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.dish-wrap {
+  width: 124%;
+  display: flex;
+  margin-left: 10px;
+}
+.dish-wrap:hover > .check .fa-check-circle {
+  font-size: 35px;
+  color: #fff;
+  background-color: #99E2D0;
+  border-radius: 50%;
+  border: 1px solid #99E2D0;
+  transition: transform 1s ease-out 10ms;
+}
+.dish-wrap:hover > .check .fa-check-circle {
+  transform: rotate(360deg);
+}
+
+.dish-info {
+  width: 95%;
+  /* padding-left: 15px; */
+}
+
+.dish-price {
+  padding-right: 15px;
+}
+
+.check {
+  background-color: #99E2D0;
+  border-radius: 0 20px 20px 0;
+  width: 100px;
+  height: 95px;
+}
+
+.fa-check-circle {
+  font-size: 35px;
+  color: #fff;
+  background-color: #99E2D0;
+  border-radius: 50;
+  transition: transform 1s;
+  margin: 28px 32px;
+}
+
+.order {
+  background-color: #FF79DA;
+  color: #fff;
+  border: none;
+  border-radius: 55px;
+  font-size: 19px;
+  box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
+  padding: 18px 85px;
+  margin: 50px 0 50px 80px;
+}
+.order:hover {
+  cursor: pointer;
+  box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
+  transition-duration: 1s;
+  background-color: #fface8;
+}
+
+footer {
+  background-color: #000;
+  padding: 0 0 45px 0;
+}
+footer h5 {
+  color: #fff;
+  font-family: Shrikhand;
+  font-size: 25px;
+  font-weight: 400;
+  padding: 40px 0 15px 28px;
+}
+footer .contacts {
+  display: flex;
+  text-decoration: none;
+  font-family: Roboto;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 30px;
+}
+footer .contacts p {
+  position: relative;
+}
+footer .contacts a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+  margin: 4px 0;
+}
+footer .contacts a .fa-utensils {
+  font-size: 20px;
+}
+footer .contacts a .fa-hands-helping {
+  padding: 9px 11px 5px 0;
+  transform: rotate(-15deg);
+  font-size: 15px;
+}
+
+/*# sourceMappingURL=style.css.map */
