--- a/sass/pages/_phone-enchanted.scss
+++ b/sass/pages/_phone-enchanted.scss
@@ -43,8 +43,8 @@
         @include btn-order;
     }
 
-    // footer {
-    //     @include footer;
-    // }
+    footer {
+        @include footer;
+    }
 
 }
