--- a/sass/pages/_phone-gourmand.scss
+++ b/sass/pages/_phone-gourmand.scss
@@ -42,8 +42,8 @@
         @include btn-order;
     }
 
-    // footer {
-    //     @include footer;
-    // }
+    footer {
+        @include footer;
+    }
 
 }
