--- a/sass/pages/_phone-palette.scss
+++ b/sass/pages/_phone-palette.scss
@@ -119,7 +119,7 @@
         @include btn-order;
     }
 
-    // footer {
-    //     @include phone-footer;
-    // }
+    footer {
+        @include phone-footer;
+    }
 }
