--- a/sass/pages/_desktop-homepage.scss
+++ b/sass/pages/_desktop-homepage.scss
@@ -25,7 +25,7 @@ body {
     animation: hideLoading 2s forwards;
     position: absolute;
     right: 0;
-    bottom: 20px;
+    bottom: -23px;
     left: 35px;
 
 }
@@ -338,7 +338,7 @@ body {
 // FOOTER
 
 footer {
-    @include main-footer;
+    @include desktop-footer;
 }
 
 
