--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -244,7 +244,7 @@
             justify-content: flex-start;
             color: #fff;
             font-size: 15px;
-            // padding: 10px;
+            padding: 0 15px;
             margin: 4px 0;
         }
 
