--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,13 +7,7 @@
 @import "layout/footer";
 
 @import "pages/desktop-homepage";
-@import "pages/desktop-palette";
-@import "pages/desktop-enchanted";
-@import "pages/desktop-gourmand";
-@import "pages/desktop-bastille";
+@import "pages/desktop-restaurants-pages";
 @import "pages/phone-homepage";
-@import "pages/phone-palette";
-@import "pages/phone-enchanted";
-@import "pages/phone-gourmand";
-@import "pages/phone-bastille";
+@import "pages/phone-restaurants-pages";
 @import "pages/contact";
