--- a/sass/pages/_phone-restaurants-pages.scss
+++ b/sass/pages/_phone-restaurants-pages.scss
@@ -30,6 +30,7 @@
     }
 
     .dish {
+        position: relative;
         @include dish;
     }
 
@@ -40,7 +41,7 @@
 
     .visible-dish-wrap {
         position: relative;
-        width: 93%;
+        width: 92%;
         background-color: #fff;
         border-radius: 20px;
         margin: 15px;
@@ -49,41 +50,44 @@
         text-overflow: ellipsis;
         box-shadow: 0px 7px 10px 1px rgb(0 0 0 / 15%);
 
-        &:hover {
-            width: 93%;
-            cursor: pointer;
-            transform: rotate(360deg);
+        // &:hover {
+        //     position: relative;
+        //     // width:100%;
+        //     cursor: pointer;
+        //     transform: rotate(360deg);
 
-            .dish-wrap {
-                width: 96%;
-            }
+        //     .dish-wrap {
+        //         width: 72%;
+        //     }
 
-            .dish-info {
+        //     .dish-info {
 
-                >p {
-                    width: 345px;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                }
+        //         >p {
+        //             width: 345px;
+        //             overflow: hidden;
+        //             white-space: nowrap;
+        //             text-overflow: ellipsis;
+        //         }
 
-                >h3 {
-                    width: 350px;
-                    overflow: hidden;
-                    white-space: nowrap;
-                    text-overflow: ellipsis;
-                }
-            }
-        }
+        //         >h3 {
+        //             width: 350px;
+        //             overflow: hidden;
+        //             white-space: nowrap;
+        //             text-overflow: ellipsis;
+        //         }
+        //     }
+        // }
 
     }
 
     .dish-wrap {
-        width: 131%;
+        width: 132%;
         display: flex;
-        margin-left: 10px;
+        margin-left: 11px;
 
         &:hover {
+            position: relative;
+            // width: 95%;
             >.check {
                 .fa-check-circle {
                     font-size: 25px;
@@ -92,7 +96,7 @@
                     border-radius: 50%;
                     border: 1px solid $third-color;
                     transition: transform 1s ease-out 10ms;
-                    margin: 30px;
+                    margin:30px 30px 30px 26px;
                 }
             }
 
@@ -111,7 +115,7 @@
     .check {
         background-color: #99E2D0;
         border-radius: 0 20px 20px 0;
-        width: 120px;
+        width: 90px;
         height: 90px;
     }
 
