--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ footer .fa-utensils {
     align-items: flex-start;
   }
   footer .contacts p {
-    margin-left: 32px;
+    margin-left: 30px;
     position: relative;
     display: flex;
   }
@@ -464,7 +464,7 @@ footer .fa-utensils {
 }
 
 .dish {
-  width: 79%;
+  width: 75%;
   display: flex;
   align-items: flex-end;
   margin: 0 0 17px 0;
@@ -872,7 +872,7 @@ footer .fa-utensils {
     align-items: flex-start;
   }
   footer .contacts p {
-    margin-left: 32px;
+    margin-left: 30px;
     position: relative;
     display: flex;
   }
@@ -955,7 +955,8 @@ footer .fa-utensils {
     font-weight: 100;
   }
   .dish {
-    width: 79%;
+    position: relative;
+    width: 75%;
     display: flex;
     align-items: flex-end;
     margin: 0 0 17px 0;
@@ -994,7 +995,7 @@ footer .fa-utensils {
   }
   .visible-dish-wrap {
     position: relative;
-    width: 93%;
+    width: 92%;
     background-color: #fff;
     border-radius: 20px;
     margin: 15px;
@@ -1003,30 +1004,13 @@ footer .fa-utensils {
     text-overflow: ellipsis;
     box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
   }
-  .visible-dish-wrap:hover {
-    width: 93%;
-    cursor: pointer;
-    transform: rotate(360deg);
-  }
-  .visible-dish-wrap:hover .dish-wrap {
-    width: 96%;
-  }
-  .visible-dish-wrap:hover .dish-info > p {
-    width: 345px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
-  .visible-dish-wrap:hover .dish-info > h3 {
-    width: 350px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-  }
   .dish-wrap {
-    width: 131%;
+    width: 132%;
     display: flex;
-    margin-left: 10px;
+    margin-left: 11px;
+  }
+  .dish-wrap:hover {
+    position: relative;
   }
   .dish-wrap:hover > .check .fa-check-circle {
     font-size: 25px;
@@ -1035,7 +1019,7 @@ footer .fa-utensils {
     border-radius: 50%;
     border: 1px solid #99E2D0;
     transition: transform 1s ease-out 10ms;
-    margin: 30px;
+    margin: 30px 30px 30px 26px;
   }
   .dish-wrap:hover > .check .fa-check-circle {
     transform: rotate(360deg);
@@ -1046,7 +1030,7 @@ footer .fa-utensils {
   .check {
     background-color: #99E2D0;
     border-radius: 0 20px 20px 0;
-    width: 120px;
+    width: 90px;
     height: 90px;
   }
   .order {
@@ -1085,475 +1069,7 @@ footer .fa-utensils {
     align-items: flex-start;
   }
   footer .contacts p {
-    margin-left: 32px;
-    position: relative;
-    display: flex;
-  }
-  footer .contacts a {
-    text-decoration: none;
-    display: flex;
-    justify-content: flex-start;
-    color: #fff;
-    font-size: 15px;
-    padding: 0 15px;
-    margin: 4px 0;
-  }
-  footer .contacts .fa-hands-helping {
-    padding: 10px 0;
-    transform: rotate(-50deg);
-    font-size: 15px;
-  }
-  footer .contacts .fa-utensils {
-    font-size: 15px;
-  }
-}
-@media all and (max-width: 768px) {
-  .rstnt-navigation-plate {
-    display: flex;
-    flex-direction: row;
-    padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .rstnt-navigation-plate a {
-    text-decoration: none;
-  }
-  .rstnt-navigation-plate i {
-    font-size: 20px;
-    color: gray;
-    margin: 0 25px;
-  }
-  .rstnt-navigation-plate img {
-    width: 170px;
-    padding: 0 0 0 60px;
-  }
-  .nav-img {
-    width: 100%;
-  }
-  .menu-plate {
-    position: relative;
-    margin-top: -60px;
-    background-color: #fafafa;
-    border-radius: 65px 65px 0 0;
-  }
-  .menu-plate h2 {
-    padding: 30px 0 7px 25px;
-    color: gray;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 300;
-  }
-  .line-plate {
-    border-bottom: 3px solid #99E2D0;
-    width: 7%;
-    margin: 0 0 25px 27px;
-  }
-  .menu-title-plate {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 40px 10px 25px;
-  }
-  .menu-title-plate h1 {
-    width: 70%;
-    font-size: 30px;
-    font-weight: 500;
-    font-family: Shrikhand;
-  }
-  .heart {
-    color: gray;
-    font-size: 25px;
-    font-weight: 100;
-  }
-  .dish-plate {
-    width: 79%;
-    display: flex;
-    align-items: flex-end;
-    margin: 0 0 17px 0;
-  }
-  .dish-plate span {
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .dish-info-plate {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 125%;
-    margin-right: 10px;
-  }
-  .dish-info-plate h3 {
-    width: 70%;
-    overflow: visible;
-    white-space: pre-line;
-    text-overflow: ellipsis;
-    padding-bottom: 5px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  .dish-info-plate p {
-    color: gray;
-    font-family: Roboto;
-    font-size: 17px;
-  }
-  .dish-info-plate p:hover {
-    width: 80%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .order {
-    background-color: #FF79DA;
-    color: #fff;
-    border: none;
-    border-radius: 55px;
-    font-size: 19px;
-    box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
-    padding: 18px 85px;
-    margin: 50px 0 50px 80px;
-  }
-  .order:hover {
-    cursor: pointer;
-    box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
-    transition-duration: 1s;
-    background-color: #fface8;
-  }
-  footer {
-    background-color: #000;
-    padding: 0 0 45px 0;
-  }
-  footer h5 {
-    color: #fff;
-    font-family: Shrikhand;
-    font-size: 20px;
-    font-weight: 400;
-    display: flex;
-    padding: 40px 0 25px 35px;
-  }
-  footer .contacts {
-    display: flex;
-    text-decoration: none;
-    font-family: Roboto;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  footer .contacts p {
-    margin-left: 32px;
-    position: relative;
-    display: flex;
-  }
-  footer .contacts a {
-    text-decoration: none;
-    display: flex;
-    justify-content: flex-start;
-    color: #fff;
-    font-size: 15px;
-    padding: 0 15px;
-    margin: 4px 0;
-  }
-  footer .contacts .fa-hands-helping {
-    padding: 10px 0;
-    transform: rotate(-50deg);
-    font-size: 15px;
-  }
-  footer .contacts .fa-utensils {
-    font-size: 15px;
-  }
-}
-@media all and (max-width: 768px) {
-  .rstnt-navigation-gourmand {
-    display: flex;
-    flex-direction: row;
-    padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .rstnt-navigation-gourmand a {
-    text-decoration: none;
-  }
-  .rstnt-navigation-gourmand i {
-    font-size: 20px;
-    color: gray;
-    margin: 0 25px;
-  }
-  .rstnt-navigation-gourmand img {
-    width: 170px;
-    padding: 0 0 0 60px;
-  }
-  .nav-img {
-    width: 100%;
-  }
-  .menu-gourmand {
-    position: relative;
-    margin-top: -60px;
-    background-color: #fafafa;
-    border-radius: 65px 65px 0 0;
-  }
-  .menu-gourmand h2 {
-    padding: 30px 0 7px 25px;
-    color: gray;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 300;
-  }
-  .line-gourmand {
-    border-bottom: 3px solid #99E2D0;
-    width: 7%;
-    margin: 0 0 25px 27px;
-  }
-  .menu-title-gourmand {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 40px 10px 25px;
-  }
-  .menu-title-gourmand h1 {
-    width: 70%;
-    font-size: 30px;
-    font-weight: 500;
-    font-family: Shrikhand;
-  }
-  .heart {
-    color: gray;
-    font-size: 25px;
-    font-weight: 100;
-  }
-  .dish-gourmand {
-    width: 79%;
-    display: flex;
-    align-items: flex-end;
-    margin: 0 0 17px 0;
-  }
-  .dish-gourmand span {
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .dish-info-gourmand {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 125%;
-    margin-right: 10px;
-  }
-  .dish-info-gourmand h3 {
-    width: 70%;
-    overflow: visible;
-    white-space: pre-line;
-    text-overflow: ellipsis;
-    padding-bottom: 5px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  .dish-info-gourmand p {
-    color: gray;
-    font-family: Roboto;
-    font-size: 17px;
-  }
-  .dish-info-gourmand p:hover {
-    width: 80%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .order {
-    background-color: #FF79DA;
-    color: #fff;
-    border: none;
-    border-radius: 55px;
-    font-size: 19px;
-    box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
-    padding: 18px 85px;
-    margin: 50px 0 50px 80px;
-  }
-  .order:hover {
-    cursor: pointer;
-    box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
-    transition-duration: 1s;
-    background-color: #fface8;
-  }
-  footer {
-    background-color: #000;
-    padding: 0 0 45px 0;
-  }
-  footer h5 {
-    color: #fff;
-    font-family: Shrikhand;
-    font-size: 20px;
-    font-weight: 400;
-    display: flex;
-    padding: 40px 0 25px 35px;
-  }
-  footer .contacts {
-    display: flex;
-    text-decoration: none;
-    font-family: Roboto;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  footer .contacts p {
-    margin-left: 32px;
-    position: relative;
-    display: flex;
-  }
-  footer .contacts a {
-    text-decoration: none;
-    display: flex;
-    justify-content: flex-start;
-    color: #fff;
-    font-size: 15px;
-    padding: 0 15px;
-    margin: 4px 0;
-  }
-  footer .contacts .fa-hands-helping {
-    padding: 10px 0;
-    transform: rotate(-50deg);
-    font-size: 15px;
-  }
-  footer .contacts .fa-utensils {
-    font-size: 15px;
-  }
-}
-@media all and (max-width: 768px) {
-  .rstnt-navigation-bastille {
-    display: flex;
-    flex-direction: row;
-    padding: 30px 0 15px 0;
-    /* margin: 20px 0 0 0; */
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .rstnt-navigation-bastille a {
-    text-decoration: none;
-  }
-  .rstnt-navigation-bastille i {
-    font-size: 20px;
-    color: gray;
-    margin: 0 25px;
-  }
-  .rstnt-navigation-bastille img {
-    width: 170px;
-    padding: 0 0 0 60px;
-  }
-  .nav-img {
-    width: 100%;
-  }
-  .menu-bastille {
-    position: relative;
-    margin-top: -60px;
-    background-color: #fafafa;
-    border-radius: 65px 65px 0 0;
-  }
-  .menu-bastille h2 {
-    padding: 30px 0 7px 25px;
-    color: gray;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 300;
-  }
-  .line-bastille {
-    border-bottom: 3px solid #99E2D0;
-    width: 7%;
-    margin: 0 0 25px 27px;
-  }
-  .menu-title-bastille {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 40px 10px 25px;
-  }
-  .menu-title-bastille h1 {
-    width: 70%;
-    font-size: 30px;
-    font-weight: 500;
-    font-family: Shrikhand;
-  }
-  .heart {
-    color: gray;
-    font-size: 25px;
-    font-weight: 100;
-  }
-  .dish-bastille {
-    width: 79%;
-    display: flex;
-    align-items: flex-end;
-    margin: 0 0 17px 0;
-  }
-  .dish-bastille span {
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  .dish-info-bastille {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    width: 125%;
-    margin-right: 10px;
-  }
-  .dish-info-bastille h3 {
-    width: 70%;
-    overflow: visible;
-    white-space: pre-line;
-    text-overflow: ellipsis;
-    padding-bottom: 5px;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 600;
-  }
-  .dish-info-bastille p {
-    color: gray;
-    font-family: Roboto;
-    font-size: 17px;
-  }
-  .dish-info-bastille p:hover {
-    width: 80%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-  .order {
-    background-color: #FF79DA;
-    color: #fff;
-    border: none;
-    border-radius: 55px;
-    font-size: 19px;
-    box-shadow: 1px 2px 14px 6px rgba(0, 0, 0, 0.15);
-    padding: 18px 85px;
-    margin: 50px 0 50px 80px;
-  }
-  .order:hover {
-    cursor: pointer;
-    box-shadow: -6px 20px 10px 1px rgba(0, 0, 0, 0.15);
-    transition-duration: 1s;
-    background-color: #fface8;
-  }
-  footer {
-    background-color: #000;
-    padding: 0 0 45px 0;
-  }
-  footer h5 {
-    color: #fff;
-    font-family: Shrikhand;
-    font-size: 20px;
-    font-weight: 400;
-    display: flex;
-    padding: 40px 0 25px 35px;
-  }
-  footer .contacts {
-    display: flex;
-    text-decoration: none;
-    font-family: Roboto;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  footer .contacts p {
-    margin-left: 32px;
+    margin-left: 30px;
     position: relative;
     display: flex;
   }
