--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,9 +2,9 @@ footer {
     @include desktop-footer;
 }
 
-@media all and (max-width: 768px) {
+// @media all and (max-width: 768px) {
     footer {
         @include phone-footer;
     }
 
-}
+// }
