--- a/sass/pages/_desktop-restaurants-pages.scss
+++ b/sass/pages/_desktop-restaurants-pages.scss
@@ -147,7 +147,7 @@
                 font-size: 35px;
                 color: #fff;
                 background-color: $third-color;
-                border-radius: 50%;
+                border-radius: 50px;
                 border: 1px solid $third-color;
                 transition: transform 1s ease-out 10ms;
             }
