--- a/sass/pages/_phone-restaurants-pages.scss
+++ b/sass/pages/_phone-restaurants-pages.scss
@@ -29,7 +29,7 @@
     .menu-title {
         @include menu-title;
     }
-    
+
     @keyframes menu-animation {
         from {
             bottom: -50px;
@@ -86,7 +86,7 @@
                     font-size: 25px;
                     color: #fff;
                     background-color: $third-color;
-                    border-radius: 50%;
+                    border-radius: 50px;
                     border: 1px solid $third-color;
                     transition: transform 1s ease-out 10ms;
                     margin: 30px 30px 30px 26px;
