--- a/css/style.css
+++ b/css/style.css
@@ -1021,11 +1021,13 @@ footer .fa-utensils {
     box-shadow: 0px 7px 10px 1px rgba(0, 0, 0, 0.15);
   }
   .dish-wrap {
+    outline: 1px solid red;
     width: 132%;
     display: flex;
     margin-left: 11px;
   }
   .dish-wrap:hover {
+    width: 132%;
     position: relative;
   }
   .dish-wrap:hover > .check .fa-check-circle {
@@ -1035,7 +1037,7 @@ footer .fa-utensils {
     border-radius: 50px;
     border: 1px solid #99E2D0;
     transition: transform 1s ease-out 10ms;
-    margin: 30px 30px 30px 26px;
+    margin: 30px 30px 30px 42px;
   }
   .dish-wrap:hover > .check .fa-check-circle {
     transform: rotate(360deg);
@@ -1046,7 +1048,7 @@ footer .fa-utensils {
   .check {
     background-color: #99E2D0;
     border-radius: 0 20px 20px 0;
-    width: 90px;
+    width: 110px;
     height: 90px;
   }
   .order {
