--- a/sass/pages/_phone-restaurants-pages.scss
+++ b/sass/pages/_phone-restaurants-pages.scss
@@ -73,11 +73,14 @@
     }
 
     .dish-wrap {
+        outline: 1px solid red;
         width: 132%;
         display: flex;
         margin-left: 11px;
 
+
         &:hover {
+            width: 132%;
             position: relative;
 
             // width: 95%;
@@ -89,7 +92,7 @@
                     border-radius: 50px;
                     border: 1px solid $third-color;
                     transition: transform 1s ease-out 10ms;
-                    margin: 30px 30px 30px 26px;
+                    margin: 30px 30px 30px 42px;
                 }
             }
 
@@ -108,7 +111,7 @@
     .check {
         background-color: #99E2D0;
         border-radius: 0 20px 20px 0;
-        width: 90px;
+        width: 110px;
         height: 90px;
     }
 
